2006-09-05  Lluis Sanchez Gual  <lluis@novell.com> 

	* XmlSchemaImporter.cs: In MS.NET 2.0, simple type arrays are mapped
	to strings. Make sure maps returned by ImportClassSimpleType are always
	simple type maps. All this fixes bug #77585.

2006-09-05  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlSchemaImporter.cs: Always import simple type unions
	  as string (like MS.NET does). Fixes bug #79234.

2006-08-25  Kornél Pál  <kornelpal@gmail.com>

	* MapCodeGenerator.cs: Use assembly file version constants.

2006-07-24  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlMappingAccess.cs : new type in 2.0 RTM.
	* XmlCodeExporter.cs, SoapCodeExporter.cs,
	  MapCodeGenerator.cs,
	  XmlSchemaImporter.cs, SoapSchemaImporter.cs, SchemaImporter.cs,
	  SchemaImporterExtension.cs, SchemaImporterExtensionCollection.cs,
	  XmlMemberMapping.cs, XmlSerializationReader.cs :
	  several 2.0 API fixes from betas to RTM.

2006-06-07  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlTypeMapMember.cs: Added GlobalIndex property.
	* XmlTypeMapping.cs: When adding a member, initialize its GlobalIndex
	  property.
	* SerializationCodeGenerator.cs:
	* XmlSerializationWriterInterpreter.cs:
	* XmlSerializationReaderInterpreter.cs: Use GlobalIndex instead of
	  Index to get/set the values from the input array, since some Index
	  values are shared between attribute and element members. Fixes
	  bug #78562.

2006-05-30  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationCodeGenerator.cs,
	  XmlSerializerReaderInterpreter.cs : handle CDATA section as text
	  node. Fixed bug #78536.

2006-05-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* XmlCodeExporter.cs: Added bool argument to GenerateClass and 
	GenerateEnum methods that specifies whether we're dealing with a type
	for a top-level element. In GenerateClass, do not always add Namespace
	argument for XmlRootAttribute if isTopLevel is false, and do not
	emit XmlRootAttribute if isTopLevel is false and no arguments have been
	added.